--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MANVCODES</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style copy.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 </head>
 
 <body>
@@ -18,13 +20,11 @@
         </ul>
     </div>
     <div class="main">
-        <h2>A <span>SOFTWARE</span> DEVELOPER<br>
-            <span>UI/UX</span> DESIGNER<br>
-            CSE CORE<span> ENGINEER</span>
-        </h2>
-        <div class="box">
-            <img src="images/Leonardo_Phoenix_A_stylish_anime_boy_with_a_mesmerizing_green_1-removebg-preview.png"
-                id="anime">
+        <div class="wrapper">
+            <h2>COMPUTER SCIENCE ENGINEER<br>
+                CSE CORE STUDENT at SRMIST<br>
+                SOFTWARE ENGINEER
+            </h2>
         </div>
         <div id="robot-animation" style="width: 800px; height: 600px;"></div>
         <div class="svg-wrapper">
@@ -38,73 +38,7 @@
                 </div>
             </svg>
         </div>
-    </div>
-
-    <!-- Include Three.js library -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js"></script>
-
-    <!-- Three.js Robot Animation Code -->
-    <script>
-        // Set up the scene, camera, and renderer
-        const scene = new THREE.Scene();
-        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-        const renderer = new THREE.WebGLRenderer();
-        renderer.setSize(window.innerWidth, window.innerHeight);
-        document.getElementById('robot-animation').appendChild(renderer.domElement);
-
-        // Create a basic geometry for the robot body and limbs
-        const bodyGeometry = new THREE.BoxGeometry(1, 2, 0.5);
-        const limbGeometry = new THREE.BoxGeometry(0.25, 1, 0.25);
-        const headGeometry = new THREE.BoxGeometry(0.75, 0.75, 0.75);
-        const material = new THREE.MeshStandardMaterial({ color: 0x808080 });
-
-        // Create body parts
-        const body = new THREE.Mesh(bodyGeometry, material);
-        body.position.y = 1;
-        scene.add(body);
-
-        const head = new THREE.Mesh(headGeometry, material);
-        head.position.y = 2.5;
-        scene.add(head);
-
-        const leftArm = new THREE.Mesh(limbGeometry, material);
-        leftArm.position.set(-0.75, 1, 0);
-        scene.add(leftArm);
-
-        const rightArm = new THREE.Mesh(limbGeometry, material);
-        rightArm.position.set(0.75, 1, 0);
-        scene.add(rightArm);
-
-        const leftLeg = new THREE.Mesh(limbGeometry, material);
-        leftLeg.position.set(-0.3, -0.5, 0);
-        scene.add(leftLeg);
-
-        const rightLeg = new THREE.Mesh(limbGeometry, material);
-        rightLeg.position.set(0.3, -0.5, 0);
-        scene.add(rightLeg);
-
-        // Add lighting
-        const light = new THREE.PointLight(0xffffff, 1, 100);
-        light.position.set(10, 10, 10);
-        scene.add(light);
-
-        camera.position.z = 5;
-
-        // Animation loop
-        function animate() {
-            requestAnimationFrame(animate);
-
-            // Simple animation for the arms
-            leftArm.rotation.z = Math.sin(Date.now() * 0.001) * 0.5;
-            rightArm.rotation.z = -Math.sin(Date.now() * 0.001) * 0.5;
-
-            // Simple head bobbing animation
-            head.position.y = 2.5 + Math.sin(Date.now() * 0.002) * 0.1;
-
-            renderer.render(scene, camera);
-        }
-        animate();
-    </script>
+    <script type="module" src="script.js"></script>
 </body>
 
 </html>
